@@ -145,6 +145,7 @@ Localization
         #LOC_BDArmory_Settings_AutonomousCombatSeats = Autonomous Combat Seats
         #LOC_BDArmory_Settings_DestroyWMWhenNotControlled = Destroy Uncontrolled WMs
         #LOC_BDArmory_Settings_DisplayCompetitionStatus = Display Competition Status
+        #LOC_BDArmory_Settings_DisplayCompetitionStatusHiddenUI = Show Status With UI Hidden
         #LOC_BDArmory_Settings_ResetHP = Reset Max HP of Parts
         #LOC_BDArmory_Settings_KerbalSafety = Kerbal Safety
         #LOC_BDArmory_Settings_KerbalSafetyInventory = Kerbal Inventory
