@@ -2,6 +2,9 @@
 	- Consider 'splashed' vessels as 'landed' when spawning.
 	- Get the AI on the initial load when reverting to the editor.
 	- Fix the AI GUI updating the values when switching vessels when using numeric fields.
+	- Fix some surface AI values being initialised from the wrong variables in the AI GUI.
+IMPROVEMENTS
+	- Add a toggle for showing the competition status messages with the UI hidden.
 
 v1.4.9.1
 FIXES
